@@ -61,6 +61,7 @@
 	- add i18n lookaside to PO catalogue(s) for i18n strings.
 	- try for /etc/rpm/macros.specspo so that specspo autoconfigures rpm.
 	- per-platform configuration factored into /usr/lib/rpm subdir.
+	- sparc-sun-solaris2.6 portability check.
 
 3.0.2 -> 3.0.3
 	- add --eval to find result of macro expansion.
